--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="/css/global.css">
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li><a href="#sobre">Sobre</a></li>
+            <li><a href="#Historia">Historia</a></li>
+            <li><a href="#Contato">Contato</a></li>
+        </ul>
+    </nav>
+    <section id="main">
+        <div id="sobre">
+            <h1>Sobre</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.</p>
+
+        </div>
+
+    </section>
+
+
 </body>
 </html>
