--- a/index.html
+++ b/index.html
@@ -14,16 +14,26 @@
             <li><a href="#Contato">Contato</a></li>
         </ul>
     </nav>
-    <section id="main">
-        <div id="sobre">
+    <div id="main">
+        <section id="sobre">
             <h1>Sobre</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.</p>
 
-        </div>
+        </section>
+        <section id="Historia">
+            <h1>História</h1>
+            p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.</p>
+        </section>
+        <section id="Contato">
+            <h1>Contato</h1>
 
-    </section>
+            <h3> @2023-Todos os direitos reservados</h3>
+        </section>
+    </div>
 
 
 </body>
