--- a/index.html
+++ b/index.html
@@ -20,6 +20,25 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.</p>
+                <!--Cards-->
+            <div id="card1">
+                <img src="" title="Imagem" alt="Imagem">
+                <h3>titulo do card</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores deleniti, dolore debitis quod soluta maxime non consectetur rem obcaecati doloribus recusandae sed veniam. Eligendi molestias ut porro nam deserunt et?</p>
+                <button>R$ 100,00</button>
+            </div>
+            <div id="card2">
+                <img src="" title="Imagem" alt="Imagem">
+                <h3>titulo do card</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores deleniti, dolore debitis quod soluta maxime non consectetur rem obcaecati doloribus recusandae sed veniam. Eligendi molestias ut porro nam deserunt et?</p>
+                <button>R$ 100,00</button>
+            </div>
+            <div id="card3">
+                <img src="" title="Imagem" alt="Imagem">
+                <h3>titulo do card</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores deleniti, dolore debitis quod soluta maxime non consectetur rem obcaecati doloribus recusandae sed veniam. Eligendi molestias ut porro nam deserunt et?</p>
+                <button>R$ 100,00</button>
+            </div>
 
         </section>
         <section id="Historia">
@@ -27,6 +46,8 @@
             p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.</p>
+
+                
         </section>
         <section id="Contato">
             <h1>Contato</h1>
