--- a/index.html
+++ b/index.html
@@ -3,59 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/global.css">
     <title>Site</title>
-    <link rel="stylesheet" href="/css/global.css">
 </head>
 <body>
+    <!--criando a navegação do site-->
     <nav>
         <ul>
             <li><a href="#sobre">Sobre</a></li>
-            <li><a href="#Historia">Historia</a></li>
-            <li><a href="#Contato">Contato</a></li>
+            <li><a href="#historia">História</a></li>
+            <li><a href="#contato">Contato</a></li>
         </ul>
     </nav>
+
+    <!--criando a estrutura main  do site-->
     <div id="main">
+        <!--criando as sections do site-->
         <section id="sobre">
             <h1>Sobre</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.</p>
-                <!--Cards-->
-            <div id="card1">
-                <img src="" title="Imagem" alt="Imagem">
-                <h3>titulo do card</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores deleniti, dolore debitis quod soluta maxime non consectetur rem obcaecati doloribus recusandae sed veniam. Eligendi molestias ut porro nam deserunt et?</p>
-                <button>R$ 100,00</button>
-            </div>
-            <div id="card2">
-                <img src="" title="Imagem" alt="Imagem">
-                <h3>titulo do card</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores deleniti, dolore debitis quod soluta maxime non consectetur rem obcaecati doloribus recusandae sed veniam. Eligendi molestias ut porro nam deserunt et?</p>
-                <button>R$ 100,00</button>
-            </div>
-            <div id="card3">
-                <img src="" title="Imagem" alt="Imagem">
-                <h3>titulo do card</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores deleniti, dolore debitis quod soluta maxime non consectetur rem obcaecati doloribus recusandae sed veniam. Eligendi molestias ut porro nam deserunt et?</p>
-                <button>R$ 100,00</button>
-            </div>
+
+        <!--CRIANDO CARDS-->
+
+         <div class="card">
+            <img src="img/Programação.jpg" title="Imagem" alt="Imagem">
+            <h3>titulo do card-1</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero laudantium odio deleniti magni? Blanditiis nihil perferendis sed, assumenda quidem earum, architecto voluptate recusandae cum aspernatur atque ad dolores nobis saepe.</p>
+            <button>R$ 100,00</button>
+         </div>
+         <div class="card">
+            <img src="img/Programação.jpg" title="Imagem" alt="Imagem">
+            <h3>titulo do card-2</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero laudantium odio deleniti magni? Blanditiis nihil perferendis sed, assumenda quidem earum, architecto voluptate recusandae cum aspernatur atque ad dolores nobis saepe.</p>
+            <button>R$ 100,00</button>
+         </div>
+         <div class="card">
+            <img src="img/Programação.jpg" title="Imagem" alt="Imagem">
+            <h3>titulo do card-3</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero laudantium odio deleniti magni? Blanditiis nihil perferendis sed, assumenda quidem earum, architecto voluptate recusandae cum aspernatur atque ad dolores nobis saepe.</p>
+            <button>R$ 100,00</button>
+         </div>
 
         </section>
-        <section id="Historia">
+
+        <section id="historia">
             <h1>História</h1>
-            p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fugit placeat eligendi cupiditate consectetur ullam. Aut perspiciatis voluptatem cumque, voluptate velit maiores aliquam soluta repellendus harum dolor, ratione ea odio.</p>
 
-                
         </section>
-        <section id="Contato">
+
+        <section id="contato">
             <h1>Contato</h1>
-
-            <h3> @2023-Todos os direitos reservados</h3>
+           <h3 id="rodape">@2023-todos os direitos reservados.</h3>
         </section>
-    </div>
 
 
-</body>
-</html>
+    </div>                                                     
